--- a/jbl/makefile
+++ b/jbl/makefile
@@ -14,7 +14,7 @@ endif
 ifeq ($(system),windows)
 JBL_EXLIB = 
 endif
-jbl                       :jbl/jbl_aes jbl/jbl_array jbl/jbl_base64 jbl/jbl_bitset jbl/jbl_cmd jbl/jbl_exception jbl/jbl_endian jbl/jbl_file jbl/jbl_gc jbl/jbl_ht jbl/jbl_ll jbl/jbl_log jbl/jbl_malloc jbl/jbl_md5 jbl/jbl_rand jbl/jbl_sha1 jbl/jbl_stream jbl/jbl_string jbl/jbl_time jbl/jbl_var jbl/jbl_ying 
+jbl                       :jbl/jbl_aes jbl/jbl_array jbl/jbl_base64 jbl/jbl_bitset jbl/jbl_cmd jbl/jbl_exception jbl/jbl_endian jbl/jbl_file jbl/jbl_gc jbl/jbl_ht jbl/jbl_json jbl/jbl_ll jbl/jbl_log jbl/jbl_malloc jbl/jbl_md5 jbl/jbl_rand jbl/jbl_scanner jbl/jbl_sha1 jbl/jbl_stream jbl/jbl_string jbl/jbl_time jbl/jbl_var jbl/jbl_ying 
 	ar  rc tmp$(H)$(pre)jbl.a tmp$(H)$(pre)jbl_*.o
 jbl/jbl_aes            :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_aes.o         jbl$(H)jbl_aes.c         $(JBL_EXLIB)
@@ -39,6 +39,18 @@ jbl/jbl_gc             :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_gc.o          jbl$(H)jbl_gc.c          $(JBL_EXLIB)
 jbl/jbl_ht             :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_ht.o          jbl$(H)jbl_ht.c          $(JBL_EXLIB)
+jbl/jbl_json           :
+ifeq ($(system),linux)
+ifeq ($(findstring jbl,$(complain_re2c)),jbl)
+	re2c -f -c jbl$(H)jbl_json.l -o jbl$(H)jbl_json.c
+endif
+endif
+ifeq ($(system),macos)
+ifeq ($(findstring jbl,$(complain_re2c)),jbl)
+	re2c -f -c jbl$(H)jbl_json.l -o jbl$(H)jbl_json.c
+endif
+endif
+	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_json.o        jbl$(H)jbl_json.c        $(JBL_EXLIB)
 jbl/jbl_ll             :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_ll.o          jbl$(H)jbl_ll.c          $(JBL_EXLIB)
 jbl/jbl_log             :
@@ -50,6 +62,18 @@ jbl/jbl_md5            :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_md5.o         jbl$(H)jbl_md5.c         $(JBL_EXLIB)
 jbl/jbl_rand           :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_rand.o        jbl$(H)jbl_rand.c        $(JBL_EXLIB)
+jbl/jbl_scanner           :
+ifeq ($(system),linux)
+ifeq ($(findstring jbl,$(complain_re2c)),jbl)
+	re2c -o jbl$(H)jbl_scanner.c jbl$(H)jbl_scanner.l
+endif
+endif
+ifeq ($(system),macos)
+ifeq ($(findstring jbl,$(complain_re2c)),jbl)
+	re2c -o jbl$(H)jbl_scanner.c jbl$(H)jbl_scanner.l
+endif
+endif
+	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_scanner.o     jbl$(H)jbl_scanner.c     $(JBL_EXLIB)  
 jbl/jbl_sha1           :
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_sha1.o        jbl$(H)jbl_sha1.c        $(JBL_EXLIB)    
 jbl/jbl_stream         :
@@ -70,16 +94,6 @@ endif
 endif
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_time.o       jbl$(H)jbl_time.c        $(JBL_EXLIB)
 jbl/jbl_var            :
-ifeq ($(system),linux)
-ifeq ($(findstring jbl,$(complain_re2c)),jbl)
-	re2c -o jbl$(H)jbl_var.c jbl$(H)jbl_var.l
-endif
-endif
-ifeq ($(system),macos)
-ifeq ($(findstring jbl,$(complain_re2c)),jbl)
-	re2c -o jbl$(H)jbl_var.c jbl$(H)jbl_var.l
-endif
-endif
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_var.o        jbl$(H)jbl_var.c         $(JBL_EXLIB)
 	$(CC) $(BITS) -c -Wall -o tmp$(H)$(pre)jbl_var_data.o   jbl$(H)jbl_var_data.c    $(JBL_EXLIB)
 jbl/jbl_ying           :
